--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "gostack-backend",
   "version": "1.0.0",
   "description": "First Project of Bootcamp Gostack",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "Myke Albuquerque Pinto de Oliveira",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon"
+  },
   "private": false,
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
